--- a/Solarized Dark.css
+++ b/Solarized Dark.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'SourceCodePro-Regular','Menlo', 'Lucida Grande', 'Seoge UI', 'Arial', sans-serif;
+  font-family: 'Ricty Discord', 'SourceCodePro-Regular','Menlo', 'Lucida Grande', 'Seoge UI', 'Arial', sans-serif;
   background-color: #002b36; /* base3 */
   color: #839496; /* base00 */
   padding-left: 5%;
@@ -10,7 +10,7 @@ body {
   margin: 0 auto;
   width: 100%;
   max-width: 960px;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 1.75em;
 }
 
