--- a/Solarized Light.css
+++ b/Solarized Light.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Menlo', 'Lucida Grande', 'Seoge UI', 'Arial', sans-serif;
+  font-family: 'Ricty Discord', 'Menlo', 'Lucida Grande', 'Seoge UI', 'Arial', sans-serif;
   background-color: #fdf6e3; /* base3 */
   color: #657b83;            /* base00 */
   padding-left:5%;
@@ -9,7 +9,7 @@ body {
   margin: 0 auto;
   width: 100%;
   max-width:960px;
-  font-size: 12px;
+  font-size: 18px;
   line-height: 1.25em;
 }
 .url { color: #d33682; text-decoration: none; border-bottom: 1px dashed #d33682;} /* magenta */
