disappear event logs

--- a/Solarized Dark.css
+++ b/Solarized Dark.css
@@ -171,3 +171,8 @@ body.normal .event[type=join] { display:none;}
 body.normal .event[type=quit] { display:none;}
 body.normal .event[type=part] { display:none;}
 body.normal .event[type=nick] { display:none;}
+body.console .event[type=mode] { display:none;}
+body.console .event[type=join] { display:none;}
+body.console .event[type=quit] { display:none;}
+body.console .event[type=part] { display:none;}
+body.console .event[type=nick] { display:none;}
